--- a/RecipEase/app/src/main/res/layout/content_create_recipe.xml
+++ b/RecipEase/app/src/main/res/layout/content_create_recipe.xml
@@ -157,27 +157,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="11dp"
             android:text="No Ingredients Yet"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etIngredient" />
-
-        <EditText
-            android:id="@+id/etIngredient"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="68dp"
-            android:ems="10"
-            android:hint="Enter Ingredient Name"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
 
         <EditText
             android:id="@+id/etInstruction"
@@ -193,6 +178,55 @@
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvIngredients" />
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/relativeLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            tools:context="com.recipease.project.CreateRecipeActivity"
+            tools:layout_editor_absoluteX="0dp">
+
+            <com.miguelcatalan.materialsearchview.MaterialSearchView
+                android:id="@+id/search_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:textColorHint="#FFF"
+                app:searchBackIcon="@drawable/ic_action_navigation_arrow_back_inverted"
+                app:searchBackground="@color/colorPrimary"
+                app:searchCloseIcon="@drawable/ic_action_navigation_close_inverted"
+                app:searchSuggestionBackground="@color/colorPrimary"
+                app:searchSuggestionIcon="@drawable/ic_suggestion">
+
+                <AutoCompleteTextView
+                    android:id="@+id/createActv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:ems="10"
+
+                    >
+
+                </AutoCompleteTextView>
+            </com.miguelcatalan.materialsearchview.MaterialSearchView>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/createIngredientRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/search_view"
+                android:clickable="true"
+                android:scrollbars="vertical" />
+
+        </RelativeLayout>
 
         <Button
             android:id="@+id/button3"
@@ -226,7 +260,7 @@
 
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btCreateRecipe"
             android:layout_width="383dp"
             android:layout_height="84dp"
             android:layout_marginTop="100dp"
